<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HolaMundo</string>
    <string name="action_settings">Settings</string>
    <string name="btHelpLabel">Ayuda</string>
    <string name="btCleanLabel">Limpiar</string>
    <string name="btIntent1Label">I1</string>
    <string name="btIntent2Label">I2</string>
    <string name="btIntent3Label">I3</string>
    <string name="btIntent4Label">I4</string>
    <string name="btMas">Mas</string>
    <string name="btMenos">Menos</string>

</resources>